[package]
name       = "template"
version    = "0.1.0"
authors    = ["museun <museun@outlook.com>"]
edition    = "2018"
license    = "0BSD"
repository = "https://github.com/museun/template"

[dependencies]
template_derive = { path = "./template_derive", optional = true }

log      = "0.4"
markings = "0.4"

serde      = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.8", optional = true }
serde_toml = { version = "0.5", optional = true, package = "toml" }

[features]
default = []

json = ["serde_json"]
yaml = ["serde_yaml"]
toml = ["serde_toml"]

derive = ["template_derive"]
